# duality

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  boot.c  browser.c  compile_flags.txt  documentation.html  downloads.html  duality.c  duality.js  duality.wasm  dy.js  dy.wasm  index.html  processCode.js  styles.css
.github/workflows/: main.yml
cli/: CMakeLists.txt
cli/src/: json.h  json_to_utf8.c  json_to_utf8.h  lsp_server.c  lsp_server.h  main.c  utf8_to_json.c  utf8_to_json.h
core/: CMakeLists.txt  README.md  are_equal.h  check.h  constraint.h  core.h  ctx.h  eval.h  is_subtype.h  substitute.h  type_of.h
core/include/duality/core/: api.h  are_equal.h  check.h  constraint.h  core.h  ctx.h  eval.h  is_subtype.h  ternary.h  type_of.h
core/src/: are_equal.c  check.c  constraint.c  core.c  eval.c  is_subtype.c  substitute.c  substitute.h  ternary.c  type_of.c
dap/: CMakeLists.txt  README.md  dap.h  server.h
dap/include/duality/dap/: api.h  dap.h  server.h
dap/src/: dap.c  server.c
ide/: CMakeLists.txt
ide/src/: App.cpp  App.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lsp/: CMakeLists.txt  README.md  lsp.h  server.h
lsp/include/duality/lsp/: api.h  lsp.h  server.h
lsp/src/: lsp.c  server.c
os/: README.md  acpi.h  boot.c  cpu.h  duality.h  freestanding.h  memory.h  uefi.h
support/: CMakeLists.txt  README.md  alloc.h  array.h  assert.h  bail.h  json.h  json_to_utf8.h  overflow.h  range.h  rc.h  stream.h  string.h  utf8_to_json.h  util.h
support/include/duality/support/: allocator.h  api.h  array.h  assert.h  json.h  json_to_utf8.h  log.h  obj_pool.h  overflow.h  stream.h  string.h  utf8_to_json.h  util.h
support/src/: allocator.c  array.c  assert.c  json_to_utf8.c  obj_pool.c  overflow.c  stream.c  string.c  utf8_to_json.c
syntax/: CMakeLists.txt  README.md  ast.h  ast_to_core.h  def.h  parser.h  print.h  string.h  string_type.h  unbound_variable.h  utf8_to_ast.h
syntax/include/duality/syntax/: api.h  ast.h  ast_to_core.h  parser.h
syntax/src/: ast.c  ast_to_core.c  parser.c
vscode-ext/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
vscode-ext-basic/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode-ext-basic/syntaxes/: duality.tmLanguage.json
vscode-ext-lsp/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-ext-lsp/src/: extension.ts
vscode-ext/src/: extension.ts
vscode-ext/syntaxes/: duality.tmLanguage.json
website/: index.html  styles.css
